--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
 
 </header>
 
+
+<div id="menu" class="fas fa-bars"></div>
+
+    <!--home section -->
+
+    <section class="home" id = "home">
+
+        <h3>HELLO</h3>
+        <h1>I'M <span>Benjamin Vu</span></h1>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nobis officia laborum laudantium assumenda vitae error asperiores sit possimus libero. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, ab?
+        </p>
+        <a href = #about><button class = "btn">about me<i class = "fas fa-user"></i></button></a>
+
+
+    </section>
+
+
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" ></script>
     <script src = "script.js"></script>
     
