--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <div id="menu" class="fas fa-bars"></div>
 
-    <!--home section -->
+    <!--HOME section -->
 
     <section class="home" id = "home">
 
@@ -49,6 +49,44 @@
 
 
     </section>
+
+    <!--ABOUT section -->
+
+    <section class="about" id = "about">
+        <h1 class = "heading"> <span>about</span> me</h1>
+
+        <div class = "row">
+            <div class = "info">
+                <h3> <span> name: </span>benjamin Vu</h3>
+                <h3> <span> age: </span>22</h3>
+                <h3> <span> qualification: </span>BMS</h3>
+                <h3> <span> post: </span>frontend developer</h3>
+                <h3> <span> language: </span>eng</h3>
+                <a href = #about><button class = "btn">download resume<i class = "fas fa-download"></i></button></a>
+            </div>
+
+            <div class = "counter">
+                <div class = "box">
+                    <span>2+</span>
+                    <h3>years of experience</h3>
+                </div>
+
+                <div class = "box">
+                    <span>100+</span>
+                    <h3>projects</h3>
+                </div>
+                
+                <div class = "box">
+                    <span>430+</span>
+                    <h3> happy clients</h3>
+            </div>
+
+            </div>  
+
+
+        </div>
+    </section>
+
 
 
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" ></script>
