education section is formatted

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <span>100+</span>
                     <h3>projects</h3>
                 </div>
-                
+
                 <div class = "box">
                     <span>430+</span>
                     <h3> happy clients</h3>
@@ -85,6 +85,43 @@
 
 
         </div>
+    </section>
+
+    <!--EDUCATION section -->
+
+    <section class = "education" id = "education">
+        <h1 class = "heading"> my <span>education</span></h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2022</span>
+                <h3>computer science</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2021</span>
+                <h3>computer science</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2020</span>
+                <h3>computer science</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+            </div>
+            <div class="box">
+                <i class="fas fa-graduation-cap"></i>
+                <span>2019</span>
+                <h3>computer science</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+            </div>
+
+
+        </div>
+
     </section>
 
 
