--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Vu Resume</title>
     <link href="style.css" rel = "stylesheet"> 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
 </head>
 <body>
 
@@ -27,7 +27,6 @@
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT ME</a></li>
             <li><a href="#education">EDUCATION</a></li>
-            <li><a href="#experience">EXPERIENCE</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
@@ -123,6 +122,37 @@
         </div>
 
     </section>
+
+    <!--CONTACT section -->
+
+    <section class= "contact" id = "contact">
+        <h1 class = "heading"><span>contact</span> me </h1>
+        <div class="row">
+            <div class="content">
+                <h3 class="title">contact info</h3>
+                <div class="info">
+                    <h3> <i class="fas fa-envelope"></i>benjaminvu33@gmail.com</h3>
+                    <h3> <i class="fas fa-map-marker-alt"></i>alameda, ca</h3>
+                </div>
+            </div>
+
+            <form action = "">
+                <input type = "text" placeholder="name" class ="box">
+                <input type = "email" placeholder="email" class ="box">
+                <input type = "text" placeholder="project" class ="box">
+                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder = "mesage" ></textarea>
+                <button type = "submit" class="btn" name="" id =""> send <i class = "fas fa-paper-plane"></i></button>
+
+            </form>
+        </div>
+
+
+
+    </section>
+
+
+
+
 
 
 
