made edits to descriptions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benjamin Vu Resume</title>
     <link href="style.css" rel = "stylesheet"> 
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel = "stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
 </head>
 <body>
 
@@ -40,9 +40,9 @@
 
     <section class="home" id = "home">
 
-        <h3>HELLO</h3>
-        <h1>I'M <span>Benjamin Vu</span></h1>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti nobis officia laborum laudantium assumenda vitae error asperiores sit possimus libero. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, ab?
+        <h3>Hello</h3>
+        <h1>I'm <span>Benjamin Vu</span></h1>
+        <p> I am a recent graduate from the University of the Pacific and am excited to begin my journey in tech!
         </p>
         <a href = #about><button class = "btn">about me<i class = "fas fa-user"></i></button></a>
 
@@ -56,27 +56,27 @@
 
         <div class = "row">
             <div class = "info">
-                <h3> <span> name: </span>benjamin Vu</h3>
+                <h3> <span> name: </span>Benjamin Vu</h3>
                 <h3> <span> age: </span>22</h3>
-                <h3> <span> qualification: </span>BMS</h3>
+                <h3> <span> qualification: </span>B.S. degree in Computer Science</h3>
                 <h3> <span> post: </span>frontend developer</h3>
-                <h3> <span> language: </span>eng</h3>
-                <a href = #about><button class = "btn">download resume<i class = "fas fa-download"></i></button></a>
+                <h3> <span> Languages: </span>HTML/CSS, JavaScript, Java. Python, C++</h3>
+                <a href = "images/BenjaminVu-Resume.jpg" download = ""></a> ><button class = "btn">download resume<i class = "fas fa-download"></i></button></a>
             </div>
 
             <div class = "counter">
                 <div class = "box">
-                    <span>2+</span>
-                    <h3>years of experience</h3>
+                    <span>4</span>
+                    <h3>years of coding experience</h3>
                 </div>
 
                 <div class = "box">
-                    <span>100+</span>
+                    <span>10+</span>
                     <h3>projects</h3>
                 </div>
 
                 <div class = "box">
-                    <span>430+</span>
+                    <span></span>
                     <h3> happy clients</h3>
             </div>
 
@@ -95,27 +95,27 @@
 
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>2022</span>
-                <h3>computer science</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+                <span>2021-2022</span>
+                <h3>Senior</h3>
+                <p>Made a weightlifting tracking iOS application! Graduated from the University of the Pacific.</p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>2021</span>
-                <h3>computer science</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+                <span>2020-2021</span>
+                <h3>Junior</h3>
+                <p>Programmed more projects to gain experience and exposure to other coding languages. </p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>2020</span>
-                <h3>computer science</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+                <span>2019-2020</span>
+                <h3>Sophomore</h3>
+                <p>Discovered different paths of Computer Science to pursue and created my first 2D RPG game in Java!</p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
-                <span>2019</span>
-                <h3>computer science</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente deserunt velit distinctio rem fugit et, magni sunt ipsa provident magnam!</p>
+                <span>2018-2019</span>
+                <h3>Freshman</h3>
+                <p>Began my coding journey and took beginner classes such as Intro to CS, Discrete Math, and Data Structures</p>
             </div>
 
 
