edits to description

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <h3>Hello</h3>
         <h1>I'm <span>Benjamin Vu</span></h1>
-        <p> I am a recent graduate from the University of the Pacific and am excited to begin my journey in tech!
+        <p> I am a recent graduate from the University of the Pacific and excited to begin my journey in tech!
         </p>
         <a href = #about><button class = "btn">about me<i class = "fas fa-user"></i></button></a>
 
@@ -76,8 +76,8 @@
                 </div>
 
                 <div class = "box">
-                    <span></span>
-                    <h3> happy clients</h3>
+                    <span>2</span>
+                    <h3>years of customer service</h3>
             </div>
 
             </div>  
