minor changes to description

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class = "user"> 
         <img src = "images/grad.jpg" alt="">
         <h3 class = "name">Benjamin Vu</h3>
-        <p class = "post">front end developer</p>
+        <p class = "post">New Grad Engineer</p>
     </div>
 
     <nav class = "navbar">
@@ -42,9 +42,11 @@
 
         <h3>Hello</h3>
         <h1>I'm <span>Benjamin Vu</span></h1>
-        <p> I am a recent graduate from the University of the Pacific and excited to begin my journey in tech!
+        <p> I am a recent graduate and excited to begin my journey as an engineer! From my experience, 
+            I have made data analysis, web applications, and many games. On my free time, I play basketball
+            and binge watch anime shows. I enjoy being products to life and hope to learn more skills from future companies!
         </p>
-        <a href = #about><button class = "btn">about me<i class = "fas fa-user"></i></button></a>
+        <a href = #about><button class = "btn">About Me<i class = "fas fa-user"></i></button></a>
 
 
     </section>
@@ -52,16 +54,17 @@
     <!--ABOUT section -->
 
     <section class="about" id = "about">
-        <h1 class = "heading"> <span>about</span> me</h1>
+        <h1 class = "heading"> <span>ABOUT</span> ME</h1>
 
         <div class = "row">
             <div class = "info">
-                <h3> <span> name: </span>Benjamin Vu</h3>
-                <h3> <span> age: </span>22</h3>
-                <h3> <span> qualification: </span>B.S. degree in Computer Science</h3>
-                <h3> <span> post: </span>frontend developer</h3>
-                <h3> <span> Languages: </span>HTML/CSS, JavaScript, Java. Python, C++</h3>
-                <a href = "images/BenjaminVu-Resume.jpg" download = ""></a> ><button class = "btn">download resume<i class = "fas fa-download"></i></button></a>
+                <h3> <span> Name: </span>Benjamin Vu</h3>
+                <h3> <span> Age: </span>22</h3>
+                <h3> <span> School: </span>University of the Pacific</h3>
+                <h3> <span> Degree: </span>Bachelors of Science in Computer Science</h3>
+                <h3> <span> Languages: </span>HTML/CSS, JavaScript, Java, Python, C++</h3>
+                <h3> <span> Technologies: </span>Abobe, Acrobat, Eclipse, Git, Linux, Pycharm, XCode, Visual Studio, Unity </h3>
+                <a href = "images/BenjaminVu-Resume.jpg" download = ""></a> ><button class = "btn">Download Resume<i class = "fas fa-download"></i></button></a>
             </div>
 
             <div class = "counter">
@@ -89,7 +92,7 @@
     <!--EDUCATION section -->
 
     <section class = "education" id = "education">
-        <h1 class = "heading"> my <span>education</span></h1>
+        <h1 class = "heading"> MY <span>EDUCATION</span></h1>
 
         <div class="box-container">
 
@@ -97,42 +100,43 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2021-2022</span>
                 <h3>Senior</h3>
-                <p>Made a weightlifting tracking iOS application! Graduated from the University of the Pacific.</p>
+                <p>Made a weightlifting tracking iOS application! <br> <br> Co-founded my first business <br> <br> Graduated from the University of the Pacific.</p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2020-2021</span>
                 <h3>Junior</h3>
-                <p>Programmed more projects to gain experience and exposure to other coding languages. </p>
+                <p>Programmed more projects to gain experience <br> <br> Gained more exposure to other coding languages. </p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2019-2020</span>
                 <h3>Sophomore</h3>
-                <p>Discovered different paths of Computer Science to pursue and created my first 2D RPG game in Java!</p>
+                <p>Discovered different paths of Computer Science to pursue <br> <br> Created my first 2D RPG game in Java! <br> <br> Worked
+                as a Legal Assistant over the summer.</p>
             </div>
             <div class="box">
                 <i class="fas fa-graduation-cap"></i>
                 <span>2018-2019</span>
                 <h3>Freshman</h3>
-                <p>Began my coding journey and took beginner classes such as Intro to CS, Discrete Math, and Data Structures</p>
+                <p>Began my coding journey at University of the Pacific <br> <br> Took beginner courses such as Intro to CS, Discrete Math, and Data Structures</p>
             </div>
 
 
         </div>
 
-    </section>
+    </section>  
 
     <!--CONTACT section -->
 
     <section class= "contact" id = "contact">
-        <h1 class = "heading"><span>contact</span> me </h1>
+        <h1 class = "heading"><span>CONTACT</span> ME </h1>
         <div class="row">
             <div class="content">
-                <h3 class="title">contact info</h3>
+                <h3 class="title">Contact Info</h3>
                 <div class="info">
                     <h3> <i class="fas fa-envelope"></i>benjaminvu33@gmail.com</h3>
-                    <h3> <i class="fas fa-map-marker-alt"></i>alameda, ca</h3>
+                    <h3> <i class="fas fa-map-marker-alt"></i>Alameda, CA</h3>
                 </div>
             </div>
 
@@ -141,7 +145,7 @@
                 <input type = "email" placeholder="email" class ="box">
                 <input type = "text" placeholder="project" class ="box">
                 <textarea name="" id="" cols="30" rows="10" class="box message" placeholder = "mesage" ></textarea>
-                <button type = "submit" class="btn" name="" id =""> send <i class = "fas fa-paper-plane"></i></button>
+                <button type = "submit" class="btn" name="" id =""> SEND <i class = "fas fa-paper-plane"></i></button>
 
             </form>
         </div>
