download resume button works

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3> <span> Degree: </span>Bachelors of Science in Computer Science</h3>
                 <h3> <span> Languages: </span>HTML/CSS, JavaScript, Java, Python, C++</h3>
                 <h3> <span> Technologies: </span>Abobe, Acrobat, Eclipse, Git, Linux, Pycharm, XCode, Visual Studio, Unity </h3>
-                <a href = "images/BenjaminVu-Resume.jpg" download = ""></a> ><button class = "btn">Download Resume<i class = "fas fa-download"></i></button></a>
+                <a href = "images/BenjaminVu-Resume.jpg" download ><button class = "btn">Download Resume<i class = "fas fa-download"></i></button></a>
             </div>
 
             <div class = "counter">
