--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="#home">HOME</a></li>
             <li><a href="#about">ABOUT ME</a></li>
-            <li><a href="#education">EDUCATION</a></li>
+            <li><a href="#education">JOURNEY</a></li>
             <li><a href="#contact">CONTACT</a></li>
         </ul>
     </nav>
@@ -43,8 +43,8 @@
         <h3>Hello</h3>
         <h1>I'm <span>Benjamin Vu</span></h1>
         <p> I am a recent graduate and excited to begin my journey as an engineer! From my experience, 
-            I have made data analysis, web applications, and many games. On my free time, I play basketball
-            and binge watch anime shows. I enjoy being products to life and hope to learn more skills from future companies!
+            I have made data analysis, web applications, and many games. On my free time, I enjoy playing basketball, going to the gym, 
+            and binge watching anime shows. My desire is to bring products to life and hope to improve my skills with future companies!
         </p>
         <a href = #about><button class = "btn">About Me<i class = "fas fa-user"></i></button></a>
 
@@ -92,7 +92,7 @@
     <!--EDUCATION section -->
 
     <section class = "education" id = "education">
-        <h1 class = "heading"> MY <span>EDUCATION</span></h1>
+        <h1 class = "heading"> MY <span>JOURNEY</span></h1>
 
         <div class="box-container">
 
