Contact buttons sends to email

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
             </div>
 
-            <form action = "">
+            <form action = "mailto: benjaminvu33@gmail.com" method="post" enctype="text/plain">
                 <input type = "text" placeholder="name" class ="box">
                 <input type = "email" placeholder="email" class ="box">
                 <input type = "text" placeholder="project" class ="box">
